Bug 433480 - Crash Reporting Assistant - Focus stolen while typing text
Summary: Crash Reporting Assistant - Focus stolen while typing text
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.21.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 433583 433650 433971 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-23 11:39 UTC by bug2017
Modified: 2021-03-07 22:29 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bug2017 2021-02-23 11:39:03 UTC
SUMMARY

On the "Enter the Details about the Crash" page, the focus of the "Information about the crash:" text field gets stolen by "Title of the bug report" text field if more than 1 character gets typed in.


STEPS TO REPRODUCE
1. Crash something
2. try to fill out the report
3. 

OBSERVED RESULT
Focus gets stolen

EXPECTED RESULT
Entering text

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.21.0
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Harald Sitter 2021-02-26 17:49:27 UTC
*** Bug 433583 has been marked as a duplicate of this bug. ***
Comment 2 Harald Sitter 2021-02-26 17:49:34 UTC
*** Bug 433650 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2021-02-26 17:58:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/14
Comment 4 Harald Sitter 2021-03-04 11:14:09 UTC
Git commit 38582b8b6eb27ec152d49c323d775a35e861b9b6 by Harald Sitter.
Committed on 04/03/2021 at 11:13.
Pushed by sitter into branch 'master'.

move UI setup logic out of checkTexts

it has no business being there, it is... not checking text.

specifically this resolves a problem whereby the new initial focus
setting was switching focus while the user types.

  "thou shall not covet thy neighbor's focus"

CHANGELOG: input focus is no longer dancing tango with two text fields
FIXED-IN: 5.21.3

M  +12   -13   src/bugzillaintegration/reportassistantpages_bugzilla.cpp

https://invent.kde.org/plasma/drkonqi/commit/38582b8b6eb27ec152d49c323d775a35e861b9b6
Comment 5 Harald Sitter 2021-03-04 11:39:51 UTC
Git commit ba0a804232be13767450297c327e32213d953d68 by Harald Sitter.
Committed on 04/03/2021 at 11:39.
Pushed by sitter into branch 'Plasma/5.21'.

move UI setup logic out of checkTexts

it has no business being there, it is... not checking text.

specifically this resolves a problem whereby the new initial focus
setting was switching focus while the user types.

  "thou shall not covet thy neighbor's focus"

CHANGELOG: input focus is no longer dancing tango with two text fields
FIXED-IN: 5.21.3


(cherry picked from commit 38582b8b6eb27ec152d49c323d775a35e861b9b6)

M  +12   -13   src/bugzillaintegration/reportassistantpages_bugzilla.cpp

https://invent.kde.org/plasma/drkonqi/commit/ba0a804232be13767450297c327e32213d953d68
Comment 6 Harald Sitter 2021-03-07 22:29:16 UTC
*** Bug 433971 has been marked as a duplicate of this bug. ***