move UI setup logic out of checkTexts

it has no business being there, it is... not checking text.

specifically this resolves a problem whereby the new initial focus
setting was switching focus while the user types.

  "thou shall not covet thy neighbor's focus"

CHANGELOG: input focus is no longer dancing tango with two text fields
BUG: 433480
FIXED-IN: 5.21.3